# healpy

./: .gitignore  .gitmodules  .readthedocs.yml  .rtd-environment.yml  .travis.yml  AGENTS.md  CHANGELOG.rst  CITATION  ChangeLog  Dockerfile  GENERATE_DEMO_IMAGES.md  INSTALL  INSTALL.rst  LAMBERT_FIX_SUMMARY.md  LAMBERT_FIX_TESTING.md  LEGEND_FIX.md  MANIFEST.in  README.rst  RELEASE.md  TODO  UBUNTU.md  clean.sh  conftest.py  do_inst  ez_setup.py  generate_lambert_demo_images.py  lambert_halfsky_example.py  meson.build  pykg_config.py  pyproject.toml  requirements.txt  run_pykg_config.py  setup.cfg  setup.py  testbuild.sh  travistest.sh
.github/: FUNDING.yml
cfitsiocopy/: Makefile  Makefile.in  README  README.win32  cfileio.c  cfitsio.doc  cfitsio.pc  cfitsio.pc.in  cfitsio.ps  cfitsio.tex  cfitsio.toc  changes.txt  config.status  configure  configure.in  drvrfile.c  f77_wrap.h  f77_wrap1.c  f77_wrap3.c  f77_wrap4.c  fitscore.c  fitsio.doc  fitsio.h  fitsio.ps  fitsio.tex  fitsio.toc  fpack.c  fpack.h  fpackutil.c  funpack.c  getkey.c  testf77.out  testprog.c  testprog.out
doc/: HOWTO_DOC  Makefile  alpha_channel_example.ipynb  blm_gauss_plot.ipynb  conf.py  create_images.py  docscrape.py  environment.yml  healpy_fits.rst  healpy_harmonic_ud_grade_aliasing_demo.ipynb  healpy_harmonic_ud_grade_comparison.ipynb  healpy_harmonic_ud_grade_comparison.py  healpy_harmonic_ud_grade_d10_demo.ipynb  healpy_harmonic_ud_grade_demo.ipynb  healpy_harmonic_ud_grade_power_law_demo.ipynb  healpy_harmonic_ud_grade_powerlaw_demo.ipynb  healpy_line_integral_convolution.rst  healpy_newvisu.rst  healpy_otherfunc.rst  healpy_pix.rst  healpy_projaxes.rst  healpy_projector.rst  healpy_query.rst  healpy_rotator.rst  healpy_spht.rst  healpy_tutorial.ipynb  healpy_visu.rst  healpy_zoomtool.rst  index.rst  license.rst  newvisufunc_example.ipynb  newvisufunc_legend_example.py  numpydoc.py  other_tutorials.rst  requirements.txt  tutorial.ipynb  tutorial.rst
healpixcxx/src/cxx/: CHANGES  Makefile  README.compilation  configure.ac  make_release
healpixcxx/src/cxx/Healpix_cxx/: Healpix_cxx.dox  alm.cc  alm2map_cxx_module.cc  alm_fitsio.cc  alm_fitsio.h  alm_healpix_tools.cc  alm_healpix_tools.h  alm_powspec_tools.h  anafast_cxx.cc  anafast_cxx_module.cc  calc_powspec_module.cc  healpix_base.cc  healpix_base.h  healpix_data_io.cc  healpix_map.h  healpix_map_fitsio.cc  healpix_map_fitsio.h  healpix_tables.h  hotspots_cxx_module.cc  hpxtest.cc  map2tga.par.txt  map2tga_module.cc  median_filter_cxx.cc  median_filter_cxx_module.cc  mult_alm.cc  mult_alm.par.txt  mult_alm_module.cc  planck.make  powspec.h  rotalm_cxx.cc  smoothing_cxx.cc  smoothing_cxx_module.cc  syn_alm_cxx.cc  syn_alm_cxx_module.cc  udgrade_cxx.cc  udgrade_cxx_module.cc  udgrade_harmonic_cxx.cc  udgrade_harmonic_cxx_module.cc
healpixcxx/src/cxx/alice/: MollweideSkyMap.cc  MollweideSkyMap.h  OrthogonalSkyMap.h  PolarizationHolder.cc  PolarizationHolder.h  RectSkyMap.h  SkyMap.h  SoSSkyMap.cc  SoSSkyMap.h  TextureHolder.cc  TextureHolder.h  alice2.cc  alice_test.cc  alice_usage.h  alice_utils.h  color.cc  color.h  generateTexture.cc  makeusage.sh  planck.make
healpixcxx/src/cxx/autotools/: Healpix_cxx  Makefile.am  Makefile.in  aclocal.m4  c_utils  configure  configure.ac  cxxsupport  libfftpack  libsharp  make_release
healpixcxx/src/cxx/autotools/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
healpixcxx/src/cxx/c_utils/: c_utils.c  c_utils.h  walltime_c.c  walltime_c.h
healpixcxx/src/cxx/config/: config.auto.in  config.basic_gcc  config.generic_gcc  config.healpy  config.healpy_osx  config.linux_icc  config.osx
healpixcxx/src/cxx/cxxsupport/: alloc_utils.h  announce.cc  announce.h  arr.h  bstream.h  cxxsupport.dox  error_handling.cc  fftpack_support.h  fitshandle.cc  fitshandle.h  font_data.inc  geom_utils.cc  geom_utils.h  levels_facilities.h  ls_image.cc  ls_image.h  math_utils.h  paramfile.h  planck.make  pointing.cc  pointing.h  rangeset.h  rotmatrix.cc  rotmatrix.h  safe_ptr.h  sse_utils_cxx.h  string_utils.cc  string_utils.h  trafos.h  vec3.h  walltimer.cc  walltimer.h  xcomplex.h
healpixcxx/src/cxx/docsrc/: Healpix_cxx.dox  c_utils.dox  cxxsupport.dox  index_code.html  libsharp.dox  planck.make
healpixcxx/src/cxx/libcfitsio/: planck.make
healpixcxx/src/cxx/libfftpack/: bluestein.h  fftpack.c  fftpack_inc.c  libfftpack.dox  ls_fft.c  ls_fft.h
healpixcxx/src/cxx/libsharp/: libsharp.dox  planck.make  sharp.c  sharp.h  sharp_almhelpers.c  sharp_almhelpers.h  sharp_complex_hacks.h  sharp_core.c  sharp_core.h  sharp_core_inc.c  sharp_core_inc2.c  sharp_core_inchelper.c  sharp_cxx.h  sharp_geomhelpers.c  sharp_geomhelpers.h  sharp_internal.h  sharp_lowlevel.h  sharp_vecsupport.h  sharp_vecutil.h  sharp_ylmgen_c.c  sharp_ylmgen_c.h
healpixcxx/src/cxx/test/: runtest.sh
healpy/: __init__.py  cookbook.py  fitsfunc.py  healpy_utils.py  newvisufunc.py  pixelfunc.py  projaxes.py  projector.py  query_disc_func.py  rotator.py  run_doctest_cython.py  sphtfunc.py  version.py  visufunc.py  zoomtool.py
hpbeta/: Makefile  README.compilation
paper/: paper.bib  paper.md
pshyt/: pshyt.c  pshyt.pyx
scripts/: release.sh
src/: _common.pxd  _healpy_hotspots_lib.h  _healpy_pixel_lib.cc  _healpy_sph_transform_lib.cc  _healpy_utils.h  _hotspots.pyx  _line_integral_convolution.pyx  _masktools.pyx  _query_disc.pyx  _sphtools.pyx
subprojects/: cfitsio.wrap  healpix_cxx.wrap
test/: conftest.py  demo_projscatter_fix.py  test_almxfl.py  test_colormap_segmentdata_preservation.py  test_cookbook.py  test_dist2holes.py  test_dpi_fontsize.py  test_fit_dipole.py  test_fitsfunc.py  test_graticule_rotation.py  test_harmonic_ud_grade.py  test_issue1084.py  test_lambert_projection_fix.py  test_newvisufunc_example.py  test_newvisufunc_legend.py  test_orthview_halfsky_graticule.py  test_pixel_windows.py  test_pixelfunc.py  test_pixelweights.py  test_projscatter_subplots.py  test_query_disc.py  test_setup.py  test_sphtfunc.py  test_visufunc.py
tests/: test_cookbook.py  test_fitsfunc.py  test_line_integral_convolution.py  (+3 more)
(+314 files in other folders)
