[project]
name = "healpy"
description = "Healpix tools package for Python"
dynamic = ["version"]
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Visualization",
]
authors = [
    { name = "C. Rosset", email = "cyrille.rosset@apc.univ-paris-diderot.fr" },
    { name = "A. Zonca" },
]
license = { text = "GPL-2.0-only" }
requires-python = ">=3.9"
dependencies = ["numpy>=1.19", "astropy"]

[project.optional-dependencies]
all = ["matplotlib", "scipy"]
test = [
    "pytest<8",  # pytest-cython does not work with pytest 8.x. See https://github.com/lgpage/pytest-cython/issues/58
    "pytest-cython",
    "pytest-doctestplus",
    "requests",
    "matplotlib",
    "scipy",
]

[project.urls]
homepage = "http://github.com/healpy"

[build-system]

requires = ["setuptools>=45",
            "setuptools_scm[toml]>=6.2",
            "cython>=0.16",
            "numpy>=1.25",
            "pykg-config"]

build-backend = 'setuptools.build_meta'

[tool.setuptools]
script-files = ["bin/healpy_get_wmap_maps.sh"]

[tool.setuptools.packages.find]
include = ["healpy*"]

[tool.setuptools.package-data]
healpy = ["data/*.fits",
          "data/*_cmap.dat",
          "data/totcls.dat",
          "test/data/*.fits",
          "test/data/*.fits.gz",
          "test/data/*.sh"]

[tool.setuptools.exclude-package-data]
# Exclude C/C++/Cython source files from wheels.
"*" = ["*.cc", "*.cpp", "*.h", "*.pxd", "*.pyx"]

[tool.cibuildwheel]
# Skip PyPy builds; Astropy wheels are not built for PyPy.
# Skip i686 builds.
# Skip MUSL libc builds.
skip = "pp* *_i686 *-musllinux_*"
test-command = "pytest --doctest-plus --doctest-cython -v --pyargs healpy"
test-extras = ["test"]

[tool.cibuildwheel.linux]
# Build wheels for aarch64 under emulation.
archs = ["auto", "aarch64"]

[tool.cibuildwheel.macos]
before-all = "brew install autoconf automake libtool libomp"

[tool.setuptools_scm]
write_to = "healpy/version.py"

[tool.pytest.ini_options]
addopts = "--doctest-plus --doctest-cython -v"
testpaths = "healpy"
